--- a/R_framework/Impact_model.Rmd
+++ b/R_framework/Impact_model.Rmd
@@ -156,56 +156,59 @@ year:
 
 a) calculating source-attributed impact for Chla...
 ```{r}
-YRregk_Chla_2012<- glm(formula=log10(Chla_ugL_interp) ~ #Chla_t
-              log10(Chla_ugL_interp_k7) + #Chla_t-k
-                log10(ExtP_kgday_interp_k28) + #P_ext,t-k
-                IntP_kgday_interp_k28, #P_int,t-k
-              data=subset(Me_all_interp, Yr==2012)) #subset data by year
-aov(YRregk_Chla_2012)#prints the sum of squares for the regression and residuals
-
-YRregk_Chla_2013<- glm(formula=log10(Chla_ugL_interp) ~ #Chla_t
+YRregk_Chla_2013<- aov(formula=log10(Chla_ugL_interp) ~ #Chla_t
               log10(Chla_ugL_interp_k7) + #Chla_t-k
                 log10(ExtP_kgday_interp_k28) + #P_ext,t-k
                 IntP_kgday_interp_k28, #P_int,t-k
               data=subset(Me_all_interp, Yr==2013)) #subset data by year
-aov(YRregk_Chla_2013)#prints the sum of squares for the regression and residuals
+SS_2013<- summary(YRregk_Chla_2013)#prints the sum of squares for the regression 
+impact2013<- data.frame(SS_2013[[1]])[,2,drop=FALSE] #pulls out the SS as table
 
-YRregk_Chla_2014<- glm(formula=log10(Chla_ugL_interp) ~ #Chla_t
+YRregk_Chla_2014<- aov(formula=log10(Chla_ugL_interp) ~ #Chla_t
               log10(Chla_ugL_interp_k7) + #Chla_t-k
                 log10(ExtP_kgday_interp_k28) + #P_ext,t-k
                 IntP_kgday_interp_k28, #P_int,t-k
               data=subset(Me_all_interp, Yr==2014)) #subset data by year
-aov(YRregk_Chla_2014)#prints the sum of squares for the regression and residuals
+SS_2014<- summary(YRregk_Chla_2014)#prints the sum of squares for the regression 
+impact2014<- data.frame(SS_2014[[1]])[,2,drop=FALSE] #pulls out the SS as table
 
-YRregk_Chla_2015<- glm(formula=log10(Chla_ugL_interp) ~ #Chla_t
+YRregk_Chla_2015<- aov(formula=log10(Chla_ugL_interp) ~ #Chla_t
               log10(Chla_ugL_interp_k7) + #Chla_t-k
                 log10(ExtP_kgday_interp_k28) + #P_ext,t-k
                 IntP_kgday_interp_k28, #P_int,t-k
               data=subset(Me_all_interp, Yr==2015)) #subset data by year
-aov(YRregk_Chla_2015)#prints the sum of squares for the regression and residuals
+SS_2015<- summary(YRregk_Chla_2015)#prints the sum of squares for the regression 
+impact2015<- data.frame(SS_2015[[1]])[,2,drop=FALSE] #pulls out the SS as table
 
-YRregk_Chla_2016<- glm(formula=log10(Chla_ugL_interp) ~ #Chla_t
+YRregk_Chla_2016<- aov(formula=log10(Chla_ugL_interp) ~ #Chla_t
               log10(Chla_ugL_interp_k7) + #Chla_t-k
                 log10(ExtP_kgday_interp_k28) + #P_ext,t-k
                 IntP_kgday_interp_k28, #P_int,t-k
               data=subset(Me_all_interp, Yr==2016)) #subset data by year
-aov(YRregk_Chla_2016)#prints the sum of squares for the regression and residuals
+SS_2016<- summary(YRregk_Chla_2016)#prints the sum of squares for the regression 
+impact2016<- data.frame(SS_2016[[1]])[,2,drop=FALSE] #pulls out the SS as table
 
-YRregk_Chla_2017<- glm(formula=log10(Chla_ugL_interp) ~ #Chla_t
+YRregk_Chla_2017<- aov(formula=log10(Chla_ugL_interp) ~ #Chla_t
               log10(Chla_ugL_interp_k7) + #Chla_t-k
                 log10(ExtP_kgday_interp_k28) + #P_ext,t-k
                 IntP_kgday_interp_k28, #P_int,t-k
               data=subset(Me_all_interp, Yr==2017)) #subset data by year
-aov(YRregk_Chla_2017)#prints the sum of squares for the regression and residuals
+SS_2017<- summary(YRregk_Chla_2017)#prints the sum of squares for the regression 
+impact2017<- data.frame(SS_2017[[1]])[,2,drop=FALSE] #pulls out the SS as table
 
-YRregk_Chla_2018<- glm(formula=log10(Chla_ugL_interp) ~ #Chla_t
+YRregk_Chla_2018<- aov(formula=log10(Chla_ugL_interp) ~ #Chla_t
               log10(Chla_ugL_interp_k7) + #Chla_t-k
                 log10(ExtP_kgday_interp_k28) + #P_ext,t-k
                 IntP_kgday_interp_k28, #P_int,t-k
               data=subset(Me_all_interp, Yr==2018)) #subset data by year
-aov(YRregk_Chla_2018)#prints the sum of squares for the regression and residuals
+SS_2018<- summary(YRregk_Chla_2018)#prints the sum of squares for the regression 
+impact2018<- data.frame(SS_2018[[1]])[,2,drop=FALSE] #pulls out the SS as table
 
-
+Model_output_Chla<- cbind(impact2013, impact2014, impact2015, impact2016, 
+                          impact2017, impact2018) #combines all tables together
+colnames(Model_output_Chla)<- c("2013", "2014", "2015", "2016", "2017", "2018")
+# renames columns with year for sum squares
+write.csv(Model_output_Chla, file="Cleaned_data/Impact_model_output_Chla.csv")
 ```
 
 Yearly source-attributed impact outputted.
@@ -213,61 +216,65 @@ Yearly source-attributed impact outputted.
 b) calculating source-attributed impact for CD...
 
 ```{r}
-YRregk_CD_2012<- glm(formula=log10(CD_cellsmL_interp) ~ #CD_t
-              log10(CD_cellsmL_interp_k7) + #CD_t-k
-                log10(ExtP_kgday_interp_k28) + #P_ext,t-k
-                IntP_kgday_interp_k28, #P_int,t-k
-              data=subset(Me_all_interp, Yr==2012) #subset data by year
-            )
-aov(YRregk_CD_2012)
-
-YRregk_CD_2013<- glm(formula=log10(CD_cellsmL_interp) ~ #CD_t
+YRregk_CD_2013<- aov(formula=log10(CD_cellsmL_interp) ~ #CD_t
               log10(CD_cellsmL_interp_k7) + #CD_t-k
                 log10(ExtP_kgday_interp_k28) + #P_ext,t-k
                 IntP_kgday_interp_k28, #P_int,t-k
               data=subset(Me_all_interp, Yr==2013) #subset data by year
             )
-aov(YRregk_CD_2013)
+SS_2013<- summary(YRregk_CD_2013)#prints the sum of squares for the regression 
+impact2013<- data.frame(SS_2013[[1]])[,2,drop=FALSE] #pulls out the SS as table
 
-YRregk_CD_2014<- glm(formula=log10(CD_cellsmL_interp) ~ #CD_t
+YRregk_CD_2014<- aov(formula=log10(CD_cellsmL_interp) ~ #CD_t
               log10(CD_cellsmL_interp_k7) + #CD_t-k
                 log10(ExtP_kgday_interp_k28) + #P_ext,t-k
                 IntP_kgday_interp_k28, #P_int,t-k
               data=subset(Me_all_interp, Yr==2014) #subset data by year
             )
-aov(YRregk_CD_2014)
+SS_2014<- summary(YRregk_CD_2014)#prints the sum of squares for the regression 
+impact2014<- data.frame(SS_2014[[1]])[,2,drop=FALSE] #pulls out the SS as table
 
-YRregk_CD_2015<- glm(formula=log10(CD_cellsmL_interp) ~ #CD_t
+YRregk_CD_2015<- aov(formula=log10(CD_cellsmL_interp) ~ #CD_t
               log10(CD_cellsmL_interp_k7) + #CD_t-k
                 log10(ExtP_kgday_interp_k28) + #P_ext,t-k
                 IntP_kgday_interp_k28, #P_int,t-k
               data=subset(Me_all_interp, Yr==2015) #subset data by year
             )
-aov(YRregk_CD_2015)
+SS_2015<- summary(YRregk_CD_2015)#prints the sum of squares for the regression 
+impact2015<- data.frame(SS_2015[[1]])[,2,drop=FALSE] #pulls out the SS as table
 
-YRregk_CD_2016<- glm(formula=log10(CD_cellsmL_interp) ~ #CD_t
+YRregk_CD_2016<- aov(formula=log10(CD_cellsmL_interp) ~ #CD_t
               log10(CD_cellsmL_interp_k7) + #CD_t-k
                 log10(ExtP_kgday_interp_k28) + #P_ext,t-k
                 IntP_kgday_interp_k28, #P_int,t-k
               data=subset(Me_all_interp, Yr==2016) #subset data by year
             )
-aov(YRregk_CD_2016)
+SS_2016<- summary(YRregk_CD_2016)#prints the sum of squares for the regression 
+impact2016<- data.frame(SS_2016[[1]])[,2,drop=FALSE] #pulls out the SS as table
 
-YRregk_CD_2017<- glm(formula=log10(CD_cellsmL_interp) ~ #CD_t
+YRregk_CD_2017<- aov(formula=log10(CD_cellsmL_interp) ~ #CD_t
               log10(CD_cellsmL_interp_k7) + #CD_t-k
                 log10(ExtP_kgday_interp_k28) + #P_ext,t-k
                 IntP_kgday_interp_k28, #P_int,t-k
               data=subset(Me_all_interp, Yr==2017) #subset data by year
             )
-aov(YRregk_CD_2017)
+SS_2017<- summary(YRregk_CD_2017)#prints the sum of squares for the regression 
+impact2017<- data.frame(SS_2017[[1]])[,2,drop=FALSE] #pulls out the SS as table
 
-YRregk_CD_2018<- glm(formula=log10(CD_cellsmL_interp) ~ #CD_t
+YRregk_CD_2018<- aov(formula=log10(CD_cellsmL_interp) ~ #CD_t
               log10(CD_cellsmL_interp_k7) + #CD_t-k
                 log10(ExtP_kgday_interp_k28) + #P_ext,t-k
                 IntP_kgday_interp_k28, #P_int,t-k
               data=subset(Me_all_interp, Yr==2018) #subset data by year
             )
-aov(YRregk_CD_2018)
+SS_2018<- summary(YRregk_CD_2018)#prints the sum of squares for the regression 
+impact2018<- data.frame(SS_2018[[1]])[,2,drop=FALSE] #pulls out the SS as table
+
+Model_output_CD<- cbind(impact2013, impact2014, impact2015, impact2016, 
+                          impact2017, impact2018) #combines all tables together
+colnames(Model_output_CD)<- c("2013", "2014", "2015", "2016", "2017", "2018")
+# renames columns with year for sum squares
+write.csv(Model_output_CD, file="Cleaned_data/Impact_model_output_Chla.csv")
 ```
 
 Yearly source-attributed impact outputted.
